# msq

./: CMakeLists.txt  readme.md
src/: key.cpp  key.hpp  main.cpp  query.cpp  query.hpp
